--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
 
       <div class="block uno">
 
-        <div class="name first">
+        <div class="query name first">
           <div class="question">
-            <label>FIRST NAME</label>
+            <label>First Name</label>
           </div>
           <input type="text" placeholder="John">
         </div>
 
-        <div class="name last">
+        <div class="query name last">
           <div class="question">
-            <label>LAST NAME</label>
+            <label>Last Name</label>
           </div>
           <input type="text" placeholder="Doe">
         </div>
 
-        <div class="mail">
+        <div class="query mail">
           <div class="question">
-            <label>EMAIL ADDRESS</label>
+            <label>Email Address</label>
           </div>
           <input type="email" placeholder="matt@theironyard.com">
         </div>
 
-        <div class="country">
+        <div class="query country">
           <div class="question">
-            <label>COUNTRY</label>
+            <label>Country</label>
           </div>
           <input type="text" placeholder="France">
         </div>
 
-        <div class="bio">
+        <div class="query bio">
           <div class="question">
-            <label>BIOGRAPHY</label>
+            <label>Biography</label>
           </div>
           <textarea name="textarea"></textarea>
         </div>
@@ -56,35 +56,35 @@
 
         <div class="query phone">
           <div class="question">
-            <label>PHONE NUMBER</label>
+            <label>Phone Number</label>
           </div>
           <input type="text" placeholder="+351 999 9999">
         </div>
 
         <div class="query affiliations">
           <div class="question">
-            <label>AFFILIATIONS</label>
+            <label>Affiliations</label>
           </div>
           <textarea name="textarea"></textarea>
         </div>
 
         <div class="query job">
           <div class="question">
-            <label>OCCUPATION</label>
+            <label>Occupation</label>
           </div>
           <input type="text" placeholder="Choose an occupation">
         </div>
 
         <div class="query catname">
           <div class="question">
-            <label>CAT'S NAME</label>
+            <label>Cat's Name</label>
           </div>
           <input type="text" placeholder="Kitty">
         </div>
 
         <div class="query gadget">
           <div class="question">
-            <label>FAVORITE GADGET</label>
+            <label>Favorite Gadget</label>
           </div>
           <input type="text" placeholder="Annoy-a-tron">
         </div>
@@ -94,27 +94,27 @@
 
         <div class="query talents">
           <div class="question">
-            <label>TYPE OF TALENT</label>
+            <label>Type of Talent</label>
           </div>
           <input type="text" placeholder="Choose a talent">
         </div>
         <div class="query drink">
           <div class="question">
-            <label>FAVORITE DRINK</label>
+            <label>Favorite Drink</label>
           </div>
           <input type="text" placeholder="Green Tea">
         </div>
 
         <div class="query powers">
           <div class="question">
-            <label>SPECIAL POWER</label>
+            <label>Special Power</label>
           </div>
           <input type="text" placeholder="Lightsaber">
         </div>
 
         <div class="query comments">
           <div class="question">
-            <label>COMMENTS</label>
+            <label>Comments</label>
           </div>
           <textarea name="textarea"></textarea>
         </div>
