with drop down menu

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
           <div class="question">
             <label>Occupation</label>
           </div>
-          <input type="text" placeholder="Choose an occupation">
+          <!-- <input type="text" placeholder="Choose an occupation"> -->
+            <div  class="dropper">
+            <select>
+              <option>Choose an occupation</option>
+              <option>Augmented reality architect</option>
+              <option>Avatar relationship manager</option>
+              <option>Plant psychologist</option>
+            </select>
+          </div>
         </div>
 
         <div class="query catname">
