with pull down's that don't resize right

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
           <div class="question">
             <label>Occupation</label>
           </div>
-          <!-- <input type="text" placeholder="Choose an occupation"> -->
             <div  class="dropper">
             <select>
               <option>Choose an occupation</option>
@@ -104,7 +103,13 @@
           <div class="question">
             <label>Type of Talent</label>
           </div>
-          <input type="text" placeholder="Choose a talent">
+          <div  class="dropper">
+            <select>
+              <option>Choose an Talent</option>
+              <option>Used to be able to do “the worm” kind of.</option>
+              <option>Sleeps well on airplanes.</option>
+              <option>Doesn’t get weirded out by the word “moist.”</option>
+            </select>
         </div>
         <div class="query drink">
           <div class="question">
